// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components:results:RedoButton:Button matches the snapshot when format is desktop 1`] = `
<div
  className="sc-bdVaJa dRUGMu"
  format="desktop"
/>
`;

exports[`components:results:RedoButton:Button matches the snapshot when format is mobile 1`] = `
<div
  className="sc-bdVaJa lfurmQ"
  format="mobile"
/>
`;

exports[`components:results:RedoButton:Button matches the snapshot when format is tablet 1`] = `
<div
  className="sc-bdVaJa lfurmQ"
  format="tablet"
/>
`;
